--- a/HTMLcv.html.html
+++ b/HTMLcv.html.html
@@ -13,21 +13,21 @@
     <div class="full">
         <div class="left">
             <div class="Image">
-                <img src="CV_PIC.JPG"
+                <img src="CV_PIC_2.JPG"
                      alt="SMK"
                      style="width:100px;" height="100px">
             </div>
             <div class="Contact">
                 <h2>Contact</h2>
                 <p>
-                    <b> Email:</b>scottmckinley730@gmail.com
+                    <b> Email:</b> scottmckinley730@gmail.com
                 </p>
             </div>
-            <div class="Skills">
-                <h2>skills</h2>
+            <div class="Tech Stack">
+                <h2>Tech Stack</h2>
                 <ul>
                     <li>
-                        <b>Programing Languages:</b> Javascript
+                        <b>Programing Languages:</b> Javascript (Still Learning)
                     </li>
                     <li>
                         <b>Frontend:</b> HTML5,CSS3
@@ -49,9 +49,22 @@
                 <ul>
                     <li>Randox Excellence Award (2022)</li>
                 </ul>
+                <ul>
+                    <li>Dean's Award (2022)</li>
+                </ul>
+                <ul>
+                    <li>Dean's Award (2021)</li>
+                </ul>
+            </div>
+            <div class="Download_Button">
+                <a href="https://1drv.ms/b/s!Ak8ILj6lvv403SOW4gZ9IJyUJqap?e=CfBNcT"
+                   download="CV">
+                    <button type="button"> Link to Full Resume </button>
+                </a>
             </div>
         </div>
-        <div class="Right">
+
+        <div class="right">
             <div class="Name">
                 <h1><u>Scott McKinley</u></h1>
             </div>
@@ -60,7 +73,7 @@
                 <div class="Summary">
                     <h2>Summary</h2>
                     <p>
-                        My name is Scott McKinley, I am student looking for part time work while I study for my Bachelor’s Degree. I am a hardworking and adaptable person who has learned various skills from my time working and always open to new ideas in order to meet the needs of the workplace.
+                        My name is Scott McKinley, I am completing my final year in Biomedical Science and applying to a Master’s in Software Programming. I aspire to develop the skills and knowledge needed to meet the demands the Software Development industry.
                     </p>
                 </div>
                 <div class="Experience">
@@ -78,7 +91,7 @@
                 </div>
                 <div class="Education">
                     <h2>Education</h2>
-                    <table>
+                    <table class="center">
                         <tr>
                             <th> University/college</th>
                             <th>Programme</th>
@@ -96,7 +109,7 @@
                 </div>
                 <div class="Project">
                     <h2>Projects</h2>
-                    <table>
+                    <table class="center">
                         <tr>
                             <th> Project</th>
                             <th>Date </th>
@@ -110,15 +123,8 @@
                         </tr>
                     </table>
                 </div>
-                <div class="Download_Button">
-                    <a href="https://1drv.ms/w/s!Ak8ILj6lvv403SAA3oYCyeKljExR?e=CmOutt"
-                       download="CV">
-                        <button type="button"> Resume </button>
-                    </a>
-                </div>
             </div>
         </div>
-
-
+        </div>
 </body>
 </html>
