--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="full">
         <div class="left">
             <div class="Image">
-                <img "https://github.com/Scott-McKinley-24/Resume/blob/main/CV_PIC_2.jpg"
+                <img "https://github.com/Scott-McKinley-24/Resume/blob/main/CV_PIC_2.jpg/images/equation-1.gif"
                      alt="SMK"
                      style="width:100px;" height="100px">
             </div>
