--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </ul>
             </div>
             <div class="Download_Button">
-                <a href="https://1drv.ms/b/s!Ak8ILj6lvv403SOW4gZ9IJyUJqap?e=CfBNcT"
+                <a href="https://1drv.ms/b/s!Ak8ILj6lvv403SRBMuQ6_HMtCOVy?e=F96Gb7"
                    download="CV">
                     <button type="button"> Link to Full Resume </button>
                 </a>
