--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </ul>
             </div>
             <div class="Download_Button">
-                <a href="https://1drv.ms/b/s!Ak8ILj6lvv403SRBMuQ6_HMtCOVy?e=F96Gb7"
+                <a href="https://1drv.ms/b/s!Ak8ILj6lvv403SWRTXc_Rhykthr4?e=sgdBKi"
                    download="CV">
                     <button type="button"> Link to Full Resume </button>
                 </a>
